mobile version of footer

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -159,14 +159,6 @@ footer a:hover {
     line-height: normal;
 }
 
-#pages {
-    color: var(--clr-blue);
-    position: relative;
-    width: min(.6rem, .9vw);
-    height:  min(.6rem, .9vw);
-    background-color: transparent;
-}
-
 /************* search box ***************/
 
 .search-box {
@@ -265,6 +257,7 @@ footer a:hover {
 
 .header-body {
     width: 100%;
+    height: calc(100vh - min(10.5vw, 20vh));
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -275,7 +268,7 @@ footer a:hover {
 
 .header-container {
     width: 70%;
-    height: calc(100vh - min(10.5vw, 20vh));
+    height: 100%;
     background-color: var(--clr-white-gray);
 }
 
@@ -290,29 +283,6 @@ footer a:hover {
 }
 
 /*****************************************************************/
-.default-site-footer-box {
-    gap: 2.8vw;
-}
-
-.footer-container {
-    width: 100%;
-    height: 70%;
-    gap: 10vh;
-}
-
-.default-site-footer {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    gap: 10vh;
-}
-
-.footer-copyright {
-    width: 100%;
-    height: 5vh;
-    gap: .2vw;
-}
-
 .footer-text-box-2,
 .footer-text-box,
 .footer-copyright-box,
@@ -322,6 +292,31 @@ footer a:hover {
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+.default-site-footer-box {
+    gap: 2.8vw;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-container {
+    width: 73%;
+    height: 100%;
+    gap: 10vh;
+}
+
+.default-site-footer {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    align-items: center;
+}
+
+.footer-copyright {
+    width: 100%;
+    height: 5vh;
+    gap: .2vw;
 }
 
 .footer-text-box-2 {
@@ -345,20 +340,23 @@ footer a:hover {
     justify-content: start;
     gap: 3vh;
 }
-
-.text-align-center {
-    width: 26vw;
-    text-align: center;
-    align-items: center;
-}
-
 .text-align-start {
-    width: 12vw;
     text-align: start;
 }
 
 .text-align-end {
     text-align: end;
+}
+
+.footer-content-box.text-align-center {
+    text-align: center;
+    align-items: center;
+    width: 25vw;
+}
+
+.footer-content-box.text-align-end,
+.footer-content-box.text-align-start {
+    width: 15vw;
 }
 
 .footer-form-container {
@@ -376,6 +374,13 @@ footer a:hover {
     transition: 250ms ease all;
 }
 
+.footer-form {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    gap: min(.5vh, .3vw);
+}
+
 .footer-vertical-hr {
     width: .1px;
     height: 32vh;
@@ -383,6 +388,7 @@ footer a:hover {
 }
 
 .footer-subscribe-text {
+    width: 17vw;
     color: white;
     font-family: 'Roboto';
     font-size: min(4.89vh, 2.69vw);
@@ -422,7 +428,7 @@ footer a:hover {
     background-color: var(--clr-white-green);
     color: var(--clr-blue);
 }
-
+.footer-cp-p,
 .footer-p {
     color: #525C60;
     font-family: 'Open Sans';
@@ -431,7 +437,7 @@ footer a:hover {
     font-weight: 400;
     line-height: 165.4%; /* 29.772px */
 }
-
+.footer-cp-span,
 .footer-span {
     color: #525C60;
     font-family: 'Open Sans';
@@ -479,14 +485,6 @@ footer a:hover {
     box-shadow: -1px 2px 10px #afaaaa;
 }
 
-.footer-form {
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    gap: min(.5vh, .3vw);
-    width: calc(min(20vh, 11vw) + min(40vh));
-}
-
 .footer-form-input {
     padding-left: min(2vh, 1vw);
     width: min(34vh, 18vw);
@@ -521,7 +519,7 @@ footer a:hover {
 }
 
 .touch .menu__link {
-    width: 40px;
+    width: 32px;
     display: flex;
     justify-content: space-between;
     align-items: end;
@@ -541,8 +539,8 @@ footer a:hover {
 }
 
 .select-box-menu-list-item {
-    width: 90px;
-    margin-top: 2px;
+    width: 5vw;
+    margin-top: .5vw;
     color: var(--clr-blue);
     font-family: 'Roboto';
     font-size: max(.5rem, 1vw);
@@ -563,7 +561,7 @@ footer a:hover {
 }
 
 .sub-menu__list:hover .select-box-menu-list-item {
-    margin-top: 5px;
+    margin-top: 2px;
 }
 
 .select-box-menu-list-item:hover {
@@ -571,15 +569,22 @@ footer a:hover {
     margin-bottom: 5px;
 }
 
+.select-box.hovered-mobile-version .sub-menu__list {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+}
 
 .arrow {
     right: 0;
     bottom: 5px;
 	display: none;
     position: absolute;
-	border-top: 3px solid #000;
-	border-right: 3px solid transparent;
-	border-left: 3px solid transparent;
+	border-top: 2px solid #000;
+	border-right: 2px solid transparent;
+	border-left: 2px solid transparent;
 }
 
 .arrow.active{
@@ -594,7 +599,6 @@ footer a:hover {
 	border-bottom: 10px solid transparent;
 }
 
-
 body.mouse .menu__list>.select-box:hover .sub-menu__list {
 	display: flex;
     flex-direction: column;
@@ -602,50 +606,32 @@ body.mouse .menu__list>.select-box:hover .sub-menu__list {
     align-items: center;
     text-align: center;
 }
+
 body.mouse .sub-menu__list>.select-box:hover .sub-sub-menu__list {
 	display: block;
 }
 
-body.touch .sub-menu__list.open{
+.sub-menu__list.open{
 	display: block;
 }
-body.touch .sub-sub-menu__list.open{
-	display: block;
-}
+
 body.touch .arrow {
 	display: block;
 }
 
-/* @media (max-width:767px){
-	.wrapper{
-		padding: 15px;
-	}
-	.menu__list {
-		display: block;
-	}
-	.menu__list>.select-box{
-		margin: 0px 0px 10px 0px;
-	}
-	.sub-menu__list{
-		position: relative;
-		left: 0;
-		top: 0;
-	}
-	.sub-sub-menu__list{
-		padding: 0px 5px;
-		position: relative;
-		left: 0;
-		top: 0;
-	}
-	.sub-menu__arrow.arrow {
-		right: 10px;
-		top: 15px;
-		border-bottom: none;
-		border-left: 10px solid transparent;
-		border-top: 10px solid #000;
-		border-right: 10px solid transparent;
-	}
-} */
+.select-box-menu-list-item-mobile {
+    width: 40px;
+    margin-top: 10px;
+    color: var(--clr-blue);
+    font-family: var(--ff-roboto);
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    border-radius: 5000px;
+    background-color: var(--clr-black);
+    transition: 300ms ease all;
+}
 
 /******************************************************************************************************************************************/
 @media (max-width: 1199.98px) {
@@ -674,6 +660,9 @@ body.touch .arrow {
     .text-nav-box {
         display: none;
     }
+    .text-nav {
+        width: 20px;
+    }
     .text-nav-box-mobile {
         height: 30px;
         width: 100%;
@@ -681,8 +670,8 @@ body.touch .arrow {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        border-top: .1px solid var(--clr-black);
-        border-bottom: .1px solid var(--clr-black);
+        border-top: 1px solid #f7f7f7;
+        border-bottom: 1px solid #f7f7f7;
     }
     .text-nav-box-mobile .text-nav {
         display: inline;
@@ -719,36 +708,122 @@ body.touch .arrow {
     .cart-count-text {
         font-size: 8px;
     }
+    .sub-menu__list {
+        top: 0px;
+        left: -5px;
+        text-align: center;
+    }
+    .sub-menu__list a {
+        font-size: 10px;
+        background-color: var(--clr-black);
+    }
+    .text-nav-box-mobile .menu__link {
+        width: 32px;
+    }
+    .header-body {
+        height: calc(100dvh - 100px);
+    }
+    .header-container {
+        width: 80vw;
+    }
     /*************************************************/
 
 
     /***************** footer-section ****************/
     .default-site-footer {
-        height: 200px;
+        height: 400px;
+    }
+    .footer-form-container {
+        padding: 0;
+        width: 80vw;
+        height: 150px;
+        border-radius: 12px;
+        flex-direction: column;
+        justify-content: center;
+        row-gap: 20px;
+    }
+    .footer-form {
+        gap: 10px;
+    }
+    .footer-content-box {
+        height: 80px;
+    }
+    .footer-subscribe-text {
+        width: 100%;
+        font-size: 22px;
+    }
+    .footer-form-input {
+        width: 200px;
+        height: 30px;
+        border-radius: 10px;
+        font-size: 9px;
+    }
+    .footer-form-button {
+        width: 60px;
+        height: 30px;
+        border-radius: 10px;
+        font-size: 9px;
     }
     .footer-container {
-        gap: 20px;
+        justify-content: start;
+        padding-top: 30px;
+        width: 95%;
+        height: 100%;
+        row-gap: 50px;
     }
     .footer-text-box-2 {
         gap: 2px;
     }
     .site-logo-foot {
-        width: 10px;
+        width: 16px;
     }
     .site-name-foot {
-        font-size: 10px;
+        font-size: 16px;
     }
-    .site-logo-box-foot {
+    #small-logo-box {
+        width: 80px;
         gap: 2px;
     }
     .footer-content-box {
         gap: 3px;
     }
     .footer-social {
-        gap: 5px;
+        gap: 6px;
+    }
+    #logo {
+        width: 20px;
+        height: 20px;
+        font-size: 7px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     .footer-vertical-hr {
-        height: 32px;
+        height: 77px;
     }
-    
+    .footer-copyright-box {
+        height: 40px;
+    }
+    .footer-p {
+        font-size: 6px;
+    }
+    .footer-cp-p {
+        font-size: 10px;
+    }
+    .footer-cp-span {
+        font-size: 12px;
+    }
+    .footer-content-box.text-align-end,
+    .footer-content-box.text-align-start {
+        width: 70px;
+    }
+    .footer-content-box.text-align-center {
+        width: 160px;
+    }
+    .footer-h1 {
+        font-size: 11px;
+    }
+    .footer-span {
+        font-size: 5px;
+    }
 }
