--- a/templates/index.html
+++ b/templates/index.html
@@ -30,24 +30,19 @@
                         <a href="" class="text-nav">About</a>
                         <!-- select box -->
                         <div class="select-box">
-                            <a href="#" class="text-nav menu__link">Pages<span class="menu__arrow arrow"></span></a>
+                            <a href="#" class="text-nav menu__link">Pages<span class="menu__arrow"></span></a>
                             <div class="sub-menu__list">
-                                <a href="" class="select-box-menu-list-item" id="select-item-1">About</a>
-                                <a href="" class="select-box-menu-list-item" id="select-item-2">Shop</a>
-                                <a href="" class="select-box-menu-list-item" id="select-item-3">Organick</a>
-                                <a href="" class="select-box-menu-list-item" id="select-item-4">Service</a>
-                                <a href="" class="select-box-menu-list-item" id="select-item-5">Portfolio</a>
-                                <a href="" class="select-box-menu-list-item" id="select-item-6">Team</a>
-                                <a href="" class="select-box-menu-list-item" id="select-item-7">Blog</a>
-                                <a href="" class="select-box-menu-list-item" id="select-item-8">Contact</a>
-                                <a href="" class="select-box-menu-list-item display-none" id="select-item-9">Shop</a>
-                                <a href="" class="select-box-menu-list-item display-none" id="select-item-10">Projects</a>
-                                <a href="" class="select-box-menu-list-item display-none" id="select-item-11">News</a>
+                                <a href="" class="select-box-menu-list-item">Organick</a>
+                                <a href="" class="select-box-menu-list-item">Service</a>
+                                <a href="" class="select-box-menu-list-item">Portfolio</a>
+                                <a href="" class="select-box-menu-list-item">Team</a>
+                                <a href="" class="select-box-menu-list-item">Blog</a>
+                                <a href="" class="select-box-menu-list-item">Contact</a>
                             </div>
                         </div>
-                        <a href="" class="text-nav" id="for-pc-1">Shop</a>
-                        <a href="" class="text-nav" id="for-pc-2">Projects</a>
-                        <a href="" class="text-nav" id="for-pc-3">News</a>
+                        <a href="" class="text-nav">Shop</a>
+                        <a href="" class="text-nav">Projects</a>
+                        <a href="" class="text-nav">News</a>
                     </div>
                 </div>
                 <div class="nav-box-2">
@@ -66,25 +61,20 @@
                 <a href="" class="text-nav">Home</a>
                 <a href="" class="text-nav">About</a>
                 <!-- select box -->
-                <div class="select-box">
-                    <a href="#" class="text-nav menu__link">Pages<span class="menu__arrow arrow"></span></a>
-                    <div class="sub-menu__list">
-                        <a href="" class="select-box-menu-list-item" id="select-item-1">About</a>
-                        <a href="" class="select-box-menu-list-item" id="select-item-2">Shop</a>
-                        <a href="" class="select-box-menu-list-item" id="select-item-3">Organick</a>
-                        <a href="" class="select-box-menu-list-item" id="select-item-4">Service</a>
-                        <a href="" class="select-box-menu-list-item" id="select-item-5">Portfolio</a>
-                        <a href="" class="select-box-menu-list-item" id="select-item-6">Team</a>
-                        <a href="" class="select-box-menu-list-item" id="select-item-7">Blog</a>
-                        <a href="" class="select-box-menu-list-item" id="select-item-8">Contact</a>
-                        <a href="" class="select-box-menu-list-item display-none" id="select-item-9">Shop</a>
-                        <a href="" class="select-box-menu-list-item display-none" id="select-item-10">Projects</a>
-                        <a href="" class="select-box-menu-list-item display-none" id="select-item-11">News</a>
+                <div class="select-box"  id="pages-selector">
+                    <a href="#" class="text-nav menu__link">Pages<span class="menu__arrow arrow"  id="arrow"></span></a>
+                    <div class="sub-menu__list"  id="sub-menu-list">
+                        <a href="" class="select-box-menu-list-item-mobile">Organick</a>
+                        <a href="" class="select-box-menu-list-item-mobile">Service</a>
+                        <a href="" class="select-box-menu-list-item-mobile">Portfolio</a>
+                        <a href="" class="select-box-menu-list-item-mobile">Team</a>
+                        <a href="" class="select-box-menu-list-item-mobile">Blog</a>
+                        <a href="" class="select-box-menu-list-item-mobile">Contact</a>
                     </div>
                 </div>
-                <a href="" class="text-nav" id="for-pc-1">Shop</a>
-                <a href="" class="text-nav" id="for-pc-2">Projects</a>
-                <a href="" class="text-nav" id="for-pc-3">News</a>
+                <a href="" class="text-nav">Shop</a>
+                <a href="" class="text-nav">Projects</a>
+                <a href="" class="text-nav">News</a>
             </div>
         </div>
         <!-- end of navigation bar -->
@@ -105,7 +95,7 @@
             <div class="default-site-footer-box">
                 <div class="footer-form-container">
                     <div class="container-inner-box">
-                        <h1 class="footer-subscribe-text">Subscribe to <br> our Newsletter</h1>
+                        <h1 class="footer-subscribe-text">Subscribe to our Newsletter</h1>
                     </div>
                     <form class="footer-form">
                         <input type="email" name="" id="" placeholder="Your Email Address" class="footer-form-input">
@@ -166,7 +156,7 @@
         <div class="footer-copyright-box">
             <div class="footer-hr"></div>
             <div class="footer-copyright">
-                <p class="footer-p">Copyright &#169;</p><span class="footer-span">Organick</span>
+                <p class="footer-cp-p">Copyright &#169;</p><span class="footer-cp-span">Organick</span>
             </div>
         </div>
     </footer>
