--- a/templates/Organick.html
+++ b/templates/Organick.html
@@ -16,47 +16,66 @@
 <body>
     <header class="default-site-header">
         <!-- navigation bar -->
-        <nav class="default-site-nav">
-            <div class="nav-box-1">
-                <a href="" class="site-logo-box">
-                    <!-- site logo -->
-                    <img src="img/defaults/logo.svg" alt="" class="site-logo">
-                    <h1 class="site-name">Organick</h1>
-                </a>
-                <div class="text-nav-box">
-                    <a href="" class="text-nav">Home</a>
-                    <a href="" class="text-nav">About</a>
-                    <!-- select box -->
-                    <div class="select-box">
-                        <label for="pages" class="text-nav">Pages </label>
-                        <select id="pages">
-                            <option class="select-text">Organick        </option>
-                            <option class="select-text">About           </option>
-                            <option class="select-text">Shop            </option>
-                            <option class="select-text">Service         </option>
-                            <option class="select-text">Portfolio       </option>
-                            <option class="select-text">Team            </option>
-                            <option class="select-text">Blog            </option>
-                            <option class="select-text">Contact         </option>
-                        </select>
+        <div class="header-nav-container">
+            <nav class="default-site-nav">
+                <div class="nav-box-1 menu">
+                    <a href="" class="site-logo-box">
+                        <!-- site logo -->
+                        <img src="{{ url_for('static', filename='img/defaults/logo.svg') }}" alt="" class="site-logo">
+                        <h1 class="site-name">Organick</h1>
+                    </a>
+                    <div class="text-nav-box menu__list">
+                        <a href="" class="text-nav">Home</a>
+                        <a href="" class="text-nav">About</a>
+                        <!-- select box -->
+                        <div class="select-box">
+                            <a href="#" class="text-nav menu__link">Pages<span class="menu__arrow"></span></a>
+                            <div class="sub-menu__list">
+                                <a href="" class="select-box-menu-list-item">Organick</a>
+                                <a href="" class="select-box-menu-list-item">Service</a>
+                                <a href="" class="select-box-menu-list-item">Portfolio</a>
+                                <a href="" class="select-box-menu-list-item">Team</a>
+                                <a href="" class="select-box-menu-list-item">Blog</a>
+                                <a href="" class="select-box-menu-list-item">Contact</a>
+                            </div>
+                        </div>
+                        <a href="" class="text-nav">Shop</a>
+                        <a href="" class="text-nav">Projects</a>
+                        <a href="" class="text-nav">News</a>
                     </div>
-                    <a href="" class="text-nav">Shop</a>
-                    <a href="" class="text-nav">Projects</a>
-                    <a href="" class="text-nav">News</a>
                 </div>
+                <div class="nav-box-2">
+                    <!-- navigation search box -->
+                    <div class="search-box">
+                        <input type="text" class="search-input">
+                        <button class="search-button"><img src="{{ url_for('static', filename='img/defaults/search.svg') }}" alt="" class="search-icon"></button>
+                    </div>
+                    <div class="nav-cart-box">
+                        <button class="cart-icon"><img src="{{ url_for('static', filename='img/defaults/cart.svg') }}" alt=""></button>
+                        <span class="cart-count-text">Cart (0)</span>
+                    </div>
+                </div>
+            </nav>
+            <div class="text-nav-box-mobile menu__list">
+                <a href="" class="text-nav">Home</a>
+                <a href="" class="text-nav">About</a>
+                <!-- select box -->
+                <div class="select-box"  id="pages-selector">
+                    <a href="#" class="text-nav menu__link">Pages<span class="menu__arrow arrow"  id="arrow"></span></a>
+                    <div class="sub-menu__list"  id="sub-menu-list">
+                        <a href="" class="select-box-menu-list-item-mobile">Organick</a>
+                        <a href="" class="select-box-menu-list-item-mobile">Service</a>
+                        <a href="" class="select-box-menu-list-item-mobile">Portfolio</a>
+                        <a href="" class="select-box-menu-list-item-mobile">Team</a>
+                        <a href="" class="select-box-menu-list-item-mobile">Blog</a>
+                        <a href="" class="select-box-menu-list-item-mobile">Contact</a>
+                    </div>
+                </div>
+                <a href="" class="text-nav">Shop</a>
+                <a href="" class="text-nav">Projects</a>
+                <a href="" class="text-nav">News</a>
             </div>
-            <div class="nav-box-2">
-                <!-- navigation search box -->
-                <div class="search-box">
-                    <input type="text" class="search-input">
-                    <button class="search-button"><img src="{{ url_for('static', filename='img/defaults/search.svg') }}" alt="" class="search-icon"></button>
-                </div>
-                <div class="nav-cart-box">
-                    <button class="cart-icon"><img src="{{ url_for('static', filename='img/defaults/cart.svg') }}" alt=""></button>
-                    <span class="cart-count-text">Cart (0)</span>
-                </div>
-            </div>
-        </nav>
+        </div>
         <!-- end of navigation bar -->
         <div class="header-body">
             <div class="header-container">
