--- a/templates/Organick.html
+++ b/templates/Organick.html
@@ -629,7 +629,7 @@
             <div class="default-site-footer-box">
                 <div class="footer-form-container">
                     <div class="container-inner-box">
-                        <h1 class="footer-subscribe-text">Subscribe to <br> our Newsletter</h1>
+                        <h1 class="footer-subscribe-text">Subscribe to our Newsletter</h1>
                     </div>
                     <form class="footer-form">
                         <input type="email" name="" id="" placeholder="Your Email Address" class="footer-form-input">
@@ -658,10 +658,10 @@
                 </div>
                 <div class="footer-vertical-hr"></div>
                 <div class="footer-content-box text-align-center">
-                    <div class="site-logo-box" id="small-logo-box">
+                    <div class="site-logo-box-foot" id="small-logo-box">
                         <!-- site logo -->
-                        <img src="{{ url_for('static', filename='img/defaults/logo.svg') }}" alt="" class="site-logo">
-                        <h1 class="site-name">Organick</h1>
+                        <img src="{{ url_for('static', filename='img/defaults/logo.svg') }}" alt="" class="site-logo-foot">
+                        <h1 class="site-name-foot">Organick</h1>
                     </div>
                     <p class="footer-p">
                         Simply dummy text of the printing and typesetting industry. <br>
@@ -690,7 +690,7 @@
         <div class="footer-copyright-box">
             <div class="footer-hr"></div>
             <div class="footer-copyright">
-                <p class="footer-p">Copyright &#169;</p><span class="footer-span">Organick</span>
+                <p class="footer-cp-p">Copyright &#169;</p><span class="footer-cp-span">Organick</span>
             </div>
         </div>
     </footer>
